2008-01-21  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in
	(PokerTableTestCase.test08_player_has_trouble_joining): Added test
	for two kick attempts in a row.
	(PokerTableTestCase.test13_disconnect): Wrote function.

2008-01-20  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in (PokerTableTestCase.createPlayer):
	Created option so that you can create a MockClient without
	join/seat/buyIn of the player.
	(PokerTableTestCase.test08_player_has_trouble_joining): Created test.
	(MockClient.removePlayer): Wrote function.
	(MockService.leavePlayer): Wrote function.
	(MockService.sitPlayer): Wrote function.
	(MockClient.__str__): Wrote function.
	(MockService.getName): Wrote function.
	(MockClient.getName): name => Player
	(PokerTableTestCase.test09_list_players): Wrote function.
	(PokerTableTestCase.test10_destroy_table): Wrote function.
	(MockService.deleteTable): Wrote function.
	(PokerTableTestCase.test99_destroy_table): Renamed test10 to this.
	(MockClient.getPlayerInfo): Wrote function.
	(PokerTableTestCase.test10_info_and_chat): Wrote function.
	(MockClient.autoBlindAnte): Wrote function.
	(PokerTableTestCase.test11_packet): Wrote function.
	(MockClient.sitOutPlayer): Wrote function.
	(PokerTableTestCase.test12_everyone_timeout): Wrote function.

2008-01-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in (PokerTableTestCase.setUp): Added
	option to change the settings XML string. 
	(PokerTableTestCaseWithPredefinedDecks): Created class to test
	predefined decks.
	Added settings_stripped_deck_xml variable.

2008-01-14  Loic Dachary <loic@dachary.org>

	* Release 1.3.0

	* tests/test-currencyclient.py.in: specify the test database so
	  that currency is not used by default
	* tests/test-currencyclient.py.in: use configure variables and
	  currencytest only
	* tests/Makefile.am: setupMysqlVariables is not a program
	* tests/Makefile.am: setupMysqlVariables must be in EXTRA_DIST
	* AUTHORS: Bradley in authors file